# outdir-tempdir

./: Cargo.toml  README.md
scripts/: test-consumer-docker.sh  test.sh
src/: builder.rs  error.rs  lib.rs
tests/docker/: consumer.Dockerfile
tests/fixtures/consumer-crate/: Cargo.toml
tests/fixtures/consumer-crate/src/: main.rs
