[package]
name = "outdir-tempdir"
version = "0.1.0"
authors = ["Niumlaque <niumlaque@gmail.com>"]
description = "A crate for cargo-test to create temporary directories in the OUT_DIR."
edition = "2021"

license = "MIT"
repository = "https://github.com/niumlaque/outdir-tempdir"
readme = "README.md"
categories = ["development-tools"]
keywords = ["tempdir", "tmpdir"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
]
