[package]
name = "outdir-tempdir"
version = "0.2.0"
authors = ["Niumlaque <niumlaque@gmail.com>"]
description = "A crate for cargo-test to create temporary directories in the OUT_DIR."
edition = "2021"

license = "MIT"
repository = "https://github.com/niumlaque/outdir-tempdir"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["tempdir", "tmpdir", "testing"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng"]
