[package]
name = "outdir-tempdir"
version = "0.2.9"
authors = ["Niumlaque <niumlaque@gmail.com>"]
description = "A crate for cargo-test to create temporary directories under Cargo-provided or caller-selected roots."
edition = "2021"

license = "MIT"
repository = "https://github.com/niumlaque/outdir-tempdir"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["tempdir", "tmpdir", "testing"]
exclude = [
    "/.dockerignore",
    "/.gitignore",
    "/Cargo.lock",
    "/scripts/",
    "/tests/",
]

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng"]

